Feature/sc 314/crud de timeline vista backend (#46)
* commit parcial

* add files

* wrote files

* CHAINSAW PROCESSING

* Added delete file logic

* add evtx converter

* Added polimorphic execution

* added sigma

* add evtx for docker

* commit parcial

* agrego chainsaw con ejecutables para docker

* handling errors

* tweaks

* line def

* timeline definitions

* tweaks

* Added timeline creation initial logic

* added powershell

* delete chainsaw_exec unused

* add chainsaw sigma fixes on docker

* update

* remove

* remove submodule

* remove submodule

* added full sigma

* add evtx attack samples

* Update Dockerfile

* Update dev-script-up.sh

* fix docker

* fix scripts, add users to seeders and add mongo seeders

* Update timeline.js

* add swagger

* Update swagger.yaml

* Update 20220711223140-default-users.js

* add timeline deletion

* add swagger for elimination request

* remove __v

* Add timeline update

* delete of timeline fix pr

* fix swagger

* partial commit

* commit parcial

* fix query

* fix param

* remove secure

* agregar permiso para get timeline

* se agrega seeder
